# Morpheus

./: CMakeLists.txt  MANIFEST.in  dependencies.yaml  morpheus.code-workspace  pyproject.toml
ci/conda/recipes/morpheus-core/: meta.yaml
ci/conda/recipes/morpheus-libs/: meta.yaml
docker/: Dockerfile
docs/: CMakeLists.txt
docs/source/: conda_packages.md
docs/source/developer_guide/: contributing.md
python/morpheus/morpheus/_lib/: CMakeLists.txt
python/morpheus_doca/: CMakeLists.txt  setup.cfg  setup.py
python/morpheus_doca/morpheus_doca/: CMakeLists.txt
python/morpheus_doca/morpheus_doca/_lib/: CMakeLists.txt
python/morpheus_llm/: CMakeLists.txt
python/morpheus_llm/morpheus_llm/_lib/llm/: __init__.pyi
scripts/: find_stages.py  morpheus_deps.py
scripts/data/: namespace_update_data.py
src/: CMakeLists.txt  setup.cfg  setup.py
src/morpheus/: CMakeLists.txt  MANIFEST.in  data  setup.cfg
src/morpheus_llm/: CMakeLists.txt  setup.cfg  setup.py
src/morpheus_llm/_lib/: CMakeLists.txt
src/morpheus_llm/_lib/cmake/: libmorpheus.cmake
src/package_morpheus/: CMakeLists.txt  MANIFEST.in  setup.py
src/package_morpheus/morpheus/: CMakeLists.txt
src/package_morpheus_llm/: CMakeLists.txt  MANIFEST.in  setup.cfg
src/package_morpheus_llm/morpheus_llm/: CMakeLists.txt  MANIFEST.in
src/package_morpheus_llm/morpheus_llm/_lib/cmake/: libmorpheus.cmake
src/package_morpheus_llm/morpheus_llm/_lib/tests/: CMakeLists.txt
tests/morpheus/dfencoder/: test_autoencoder.py
